# MD-Simulation

./: .gitignore  README.md  meson.build
bench/: equilibrium_benchmarks.cpp  gemv_benchmarks.cpp  meson.build
milestones/: meson.build
milestones/01/: main.cpp
milestones/02/: Atoms.h  main.cpp  meson.build  verlet.bckp
milestones/03/: main.cpp  meson.build
milestones/04/: main.cpp  meson.build
milestones/05/: main.cpp  meson.build
milestones/07/: bkpmaincpp  main._bkp_melt_cpp  main.cpp  meson.build
milestones/07/plot1/: meson.build
milestones/07/single/: main.bkcp_check_timesteps  main.cpp_bckup_old
milestones/08/: main.cpp  maincpp_bckup  meson.build
milestones/09/: main.cpp  make_whisker.py  meson.build  whisker.data  whisker_2.xyz  whisker_r20.xyz  whisker_r25.xyz
milestones/playground/: main.cpp  meson.build
results/: Untitled.ipynb  results.ipynb  results1.ipynb
results/ms4/: energy_0  energy_1  energy_2  energy_21  energy_3
results/ms4_2/: energy_1  energy_10  energy_2  energy_3  energy_4  energy_5  energy_6  energy_7  energy_8  energy_9
results/ms5/: data  data0  data02  data6
results/ms7/: e_all_1  e_all_11  e_all_16  e_all_21  e_all_26  e_all_31  e_all_6  energy  energy1  temp  temp1  temp_1  temp_11  temp_16  temp_21  temp_26  temp_31  temp_6
results/ms7_parallel/: ener_s_1000_14  ener_s_600_2  temp_s_600_8  traj_big_1000_2.xyz  traj_big_1000_32.xyz  traj_big_1000_8.xyz  traj_big_1200_16.xyz  traj_big_1200_24.xyz  traj_big_1200_32.xyz  traj_big_1200_8.xyz  traj_big_600_14.xyz  traj_big_600_2.xyz  traj_big_600_20.xyz  traj_big_600_32.xyz  traj_big_600_8.xyz
results/ms7melt/: ener_melt  ener_melt1415  ener_melt2057  ener_melt2869  ener_melt_big  temp_melt  temp_melt1415  temp_melt2057  temp_melt2869  temp_melt_big
results/ms9/: whisker_r20stress_0_1  whisker_r20stress_0_3  whisker_r20stress_0_5  whisker_r20stress_100_1  whisker_r20stress_100_3  whisker_r20stress_100_5  whisker_r25stress_0_1  whisker_r25stress_0_3  whisker_r25stress_0_5  whisker_smallener_20_20  whisker_smallener_20_200  whisker_smallstress_0_1  whisker_smallstress_0_3  whisker_smallstress_0_5  whisker_smallstress_100_1  whisker_smallstress_100_3  whisker_smallstress_100_5  whisker_smallstress_20_20  whisker_smallstress_20_200
src/: Atoms.h  berendsten.cpp  berendsten.h  cubicLatice.cpp  cubicLatice.h  domain.cpp  ducastelle.cpp  ducastelle.h  hello.cpp  hello.h  lj.cpp  lj.h  lj_direct_summation.cpp  lj_direct_summation.h  meson.build  mpi_support.h  neighbors.cpp  neighbors.h  verlet.cpp  verlet.h  xyz.cpp  xyz.h
tests/: meson.build  test_hello_world.cpp
tests/01/: meson.build  test_hello_world.cpp
tests/02/: meson.build  test_pi.cpp  test_verlet  test_verlet.cpp
tests/02_test/: test_pi.cpp
tests/03/: meson.build  test_verlet.cpp
tests/05/: test_berendsten_thermostat.cpp  test_cubic_latice.cpp
tests/06/: test_neighbors.cpp  test_updated_lj.cpp
tests/07/: test_ducastelle.cpp  test_energy_conservation.cpp
tests/09/: test_whisker_energies_temps.cpp
(+132 files in other folders)
